objects/ssot__ForecastingPrediction__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__Amount__c</fullName>
        <label>DoNotUseAmount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Amt__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ssot__BusinessPeriodId__c</fullName>
        <label>Business Period</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ForecastOwnerId__c</fullName>
        <label>Forecast Owner</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ForecastingTypeId__c</fullName>
        <label>Forecasting Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HigherBoundAmount__c</fullName>
        <label>DoNotUseHigherBoundAmount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__HigherBoundAmt__c</fullName>
        <label>Higher Bound Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ssot__HigherBoundQuantity__c</fullName>
        <label>Higher Bound Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ID__c</fullName>
        <label>Forecasting Prediction Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LowerBoundAmount__c</fullName>
        <label>DoNotUseLowerBoundAmount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__LowerBoundAmt__c</fullName>
        <label>Lower Bound Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ssot__LowerBoundQuantity__c</fullName>
        <label>Lower Bound Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrevPredictionAmount__c</fullName>
        <label>DoNotUsePrevPredictionAmount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PrevPredictionAmt__c</fullName>
        <label>Previous Prediction Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ssot__PrevPredictionChangeDate__c</fullName>
        <label>Previous Prediction Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ProductFamily__c</fullName>
        <label>Product Family</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
</CustomObject>